test/correct/LocalDict.hs
data A = A Int
 deriving Show
 
main = show (A 3)
